# ToolX

./: CMakeLists.txt  README.md
BranchClipper/: qSlicerBranchClipperModuleWidget.cxx
BranchClipper/Logic/: vtkSlicerBranchClipperLogic.cxx
Resources/: BUILD.txt  find_slicer.diff  no_itkzlib_vtkvmtkContrib.diff  vtkThreshold_changes.diff
